--- a/index.html
+++ b/index.html
@@ -1,193 +1,66 @@
 <!DOCTYPE html>
 <html>
-<body>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<h1 style="text-align:center;background-color:LightCoral">Congratulations on graduating high school!!</h1>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<h2 style="text-align:center;background-color:LightSalmon">Class of 2020 / Class of COIVD-19</h2>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<h3 style="text-align:center;background-color:LightCyan">I'm so proud of you!!</h3>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<p style="text-align:center;background-color:LightSeaGreen">I hope graduation was lovely! I can't wait to see your next endeavors.</p>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<img src="https://cdn11.bigcommerce.com/s-fv30h7po13/products/3865/images/5576/Congrats_Grad_Banner__85416.1584644344.386.513.jpg?c=2">
-	<img src="https://images-na.ssl-images-amazon.com/images/I/71vJgEZ9BNL._AC_SX522_.jpg">
-	<img src="https://images-na.ssl-images-amazon.com/images/I/71vJgEZ9BNL._AC_SX522_.jpg">
-	<img src="https://cdn11.bigcommerce.com/s-fv30h7po13/products/3865/images/5576/Congrats_Grad_Banner__85416.1584644344.386.513.jpg?c=2">
 
+<head>
+    <!-- META -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- PAGE TITLE -->
+    <title>Personal portfolio website</title>
+    <!-- BOOTSTRAP CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- ALL GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Schoolbell:300,400,700,900" rel="stylesheet">
+    <!-- MAIN STYLE CSS -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+	
+	<header class="menu-area">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col-md-4">
+	                <div class="logo">
+	                    <h2>intro to webdev</h2>
+	                </div>
+	            </div>
+	            <div class="col-md-8">
+	                <div class="main-menu">
+	                    <ul>
+	                        <li><a href="Hello.html">Home</a></li>
+	                        <li><a href="">About</a></li>
+	                        <li><a href="">Service</a></li>
+	                        <li><a href="">HSSP</a></li>
+	                        <li><a href="">Contact Me</a></li>
+	                    </ul>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+	</header>
+	
+	<section class="header-area d-flex align-items-center">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col-md-12">
+	                <div class="header-text text-center">
+	                    <h1>intro to webdev</h1>
+	                    <h2>web designer/web developer</h2>
+	                    <a href="">my works</a>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+	</section>
+	
+	
+	
+   <!-- LATEST JQUERY -->
+    <script src="assets/js/jquery.min.js"></script>
+    <!-- BOOTSTRAP JS -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
