--- a/index.html
+++ b/index.html
@@ -23,17 +23,16 @@
 	        <div class="row">
 	            <div class="col-md-4">
 	                <div class="logo">
-	                    <h2>intro to webdev</h2>
+	                    <h2><a href="index.html"> intro to webdev</a></h2>
 	                </div>
 	            </div>
 	            <div class="col-md-8">
 	                <div class="main-menu">
 	                    <ul>
-	                        <li><a href="Hello.html">Home</a></li>
-	                        <li><a href="">About</a></li>
-	                        <li><a href="">Service</a></li>
-	                        <li><a href="">HSSP</a></li>
-	                        <li><a href="">Contact Me</a></li>
+	                        <li><a href="index.html">Home</a></li>
+	                        <li><a href="about.html">About</a></li>
+	                        <li><a href="projects.html">Projects</a></li>
+	                        <li><a href="contactme.html">Contact Me</a></li>
 	                    </ul>
 	                </div>
 	            </div>
@@ -48,7 +47,7 @@
 	                <div class="header-text text-center">
 	                    <h1>intro to webdev</h1>
 	                    <h2>web designer/web developer</h2>
-	                    <a href="">my works</a>
+	                    <a href="projects.html">my projects</a>
 	                </div>
 	            </div>
 	        </div>
@@ -56,11 +55,6 @@
 	</section>
 	
 	
-	
-   <!-- LATEST JQUERY -->
-    <script src="assets/js/jquery.min.js"></script>
-    <!-- BOOTSTRAP JS -->
-    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
