--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Schoolbell:300,400,700,900" rel="stylesheet">
     <!-- MAIN STYLE CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/stylescript.js"> </script>
 </head>
 
 <body>
