--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css?family=Schoolbell:300,400,700,900" rel="stylesheet">
     <!-- MAIN STYLE CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"> </script>
+
 </head>
 
 <body>
@@ -39,6 +41,123 @@
 	    </div>
 	</header>
 	
+
+<!-- GALLERY STARTS HERE -->	
+<!-- Container for the image gallery -->
+<div class="container">
+
+  <!-- Full-width images with number text -->
+  <div class="mySlides">
+    <div class="numbertext">1 / 7</div>
+      <img src="images/painting.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">2 / 7</div>
+      <img src="images/project.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">3 / 7</div>
+      <img src="images/painting.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">4 / 7</div>
+      <img src="images/bike.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">5 / 7</div>
+      <img src="images/snowman.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">6 / 7</div>
+      <img src="images/pc.jpg" style="width:100%">
+  </div>
+
+<div class="mySlides">
+    <div class="numbertext">7 / 7</div>
+      <img src="images/pc.jpg" style="width:100%">
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+  <!-- Image text -->
+  <div class="caption-container">
+    <p id="caption"></p>
+  </div>
+
+  <!-- Thumbnail images -->
+  <div class="row">
+    <div class="column">
+      <img class="demo cursor" src="images/painting.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Painting Project!!! Yay.">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="images/project.jpg" style="width:100%" onclick="currentSlide(2)" alt="Project">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="images/painting.jpg" style="width:100%" onclick="currentSlide(3)" alt="Me Painting">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="images/bike.jpg" style="width:100%" onclick="currentSlide(4)" alt="Building a Bike!">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="images/snowman.jpg" style="width:100%" onclick="currentSlide(5)" alt="Making a Snowman">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="images/pc.jpg" style="width:100%" onclick="currentSlide(6)" alt="Building a PC">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="images/painting.jpg" style="width:100%" onclick="currentSlide(7)" alt="The Painting Project!!! Yay.">
+    </div>
+  </div>
+</div>
+
+<div class="header">
+  <h2>Blog Name</h2>
+</div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
+  </div>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>About Me</h2>
+      <div class="fakeimg" style="height:100px;">Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    </div>
+    <div class="card">
+      <h3>Popular Post</h3>
+      <div class="fakeimg">Image</div><br>
+      <div class="fakeimg">Image</div><br>
+      <div class="fakeimg">Image</div>
+    </div>
+    <div class="card">
+      <h3>Follow Me</h3>
+      <p>Some text..</p>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <h2>Footer</h2>
+</div>
 
 </body>
 
