--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css?family=Schoolbell:300,400,700,900" rel="stylesheet">
     <!-- MAIN STYLE CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/stylescript.js"> </script>
+
 </head>
 
 <body>
@@ -38,8 +40,20 @@
 	        </div>
 	    </div>
 	</header>
-	
+	<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<div class="card">
+  <img src="images/yooj.jpg" alt="John" style="width:100%">
+  <h1>YooJin Yoon</h1>
+  <p class="title">HTML Web Dev HSSP Teacher</p>
+  <p>MIT</p>
+  <a href="#"><i class="fa fa-dribbble"></i></a>
+  <a href="twitter.com"><i class="fa fa-twitter"></i></a>
+  <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a>
+</div>
+	
 </body>
 
 </html>
