--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css?family=Schoolbell:300,400,700,900" rel="stylesheet">
     <!-- MAIN STYLE CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/stylescript.js"> </script>
+
 </head>
 
 <body>
@@ -38,26 +40,30 @@
 	        </div>
 	    </div>
 	</header>
-	
-<!-- CONTACT ME STARTS HERE -->	
-	<div class="container2">
-  <div style="text-align:center">
-    <h2>Contact Me</h2>
-    <p>Feel free to contact me!</p>
+
+	<div class="header">
+  <h2>Blog Name</h2>
+</div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>This summer, I...</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
   </div>
-  <div class="row">
-    <div class="column">
-      <img src="images/painting.jpg" style="width:100%">
-    </div>
-    <div class="column">
-      <form action="https://docs.google.com/forms/d/e/1FAIpQLSei6VR6GmDEDJUwVR1EnD7elFa8x6JztrYVaumX9eopNLPyVg/viewform?usp=sf_link" method="get">
-       
-        <input type="Submit" value="Contact Me">
-      </form>
-    </div>
+  
   </div>
 </div>
-  
+
 </body>
 
 </html>
